[package]
name = "confluence2md"
version = "2.0.0"
edition = "2024"
rust-version = "1.95"
description = "Convert Confluence pages to clean, portable Markdown."
license = "MIT"
default-run = "confluence2md"

[[bin]]
name = "confluence2md"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
htmd = "0.5"
markup5ever_rcdom = "0.38"
once_cell = "1"
percent-encoding = "2.3"
quick-xml = "0.37"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11.0"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "test-util"] }
wiremock = "=0.6.2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
